Fixed some of the alignment problems on images (card class) and added a photo from iPhone for personalization touch.

--- a/Neptune Waterproofing/css/style.css
+++ b/Neptune Waterproofing/css/style.css
@@ -77,13 +77,13 @@ body {
 }
 
 .newContainer {
+  background-color: white;
   padding-top: 25px;
  /*width: 75%;
  height: 100%;*/
  /*border: solid yellow 10px;*/
  padding-left: 5%;
  display: block;
- float: right;
 }
 
 #estimateButton {
@@ -195,7 +195,7 @@ nav a:hover {
 
 .projectsIntro {
  min-height: 850px; /*Height: 1205px*/
- background:url('../img/sienaWay1.jpg');
+ background:url('../img/BroadwayDeckWP.jpg');
  background-size: cover;
  text-align: center;
  border-bottom: groove 3px blue;
@@ -203,33 +203,38 @@ nav a:hover {
 
 #project1{
   /*border: orange solid 2px;*/
+  float: right;
   border-bottom: 1px black solid;
-  background-color: black;
+  background-color: white;
+
   /*border: 1px black solid;*/ /*IDK WHY THIS IS THE ONLY FIX TO THE WHITE SECTION BENEATH THIS SECTION'S DESCRIPTION*/
 }
 
+#project1 .card{
+  float: right;
+}
+
 #project2{
-  background-color: black;
+  background-color: white;
+  color: black;
  /*border: 1px black solid*/; /*IDK WHY THIS IS THE ONLY FIX TO THE WHITE SECTION BENEATH THIS SECTION'S DESCRIPTION*/
 }
 
-#project2 img{
+#project2 .card{
+  float: left;
 }
 
+/*
 #projects{
-  padding-top: 15px;
-  background-color: black;
-  display: inline;
-  border: red solid 2px;
-  border-width: thick;
-  /*width: 50%;
-  height: 100%;*/
+  border-bottom: solid 3px blue;
 }
+*/
 
 .projectDescription{
+  /*border: green solid 4px;*/
   padding-top: 15px;
-  color: white;
-  background-color: black;
+  color: black;
+  background-color: white;
   /*display: inline-block;*/
   margin: 0px 0px 25px 25%;
 }
